--- a/App/views/venta.html
+++ b/App/views/venta.html
@@ -34,7 +34,7 @@
           <th>Total</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody id="tb_venta">
         <tr>
           <td>#</td>
           <td class="t_left">Producto</td>
