--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,31 +1,36 @@
-:root{
+:root {
     --red: #EA2027;
     --red-light: #fc5c65;
     --light: #f1f2f6;
     --gray: #636e72;
 }
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
-.wrapper{
+
+.wrapper {
     height: 100vh;
 }
-.main_header{
+
+.main_header {
     height: 60px;
     background-color: var(--red-light);
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.main_container{
+
+.main_container {
     width: 100%;
     height: calc(100% - 60px);
     display: flex;
 }
-.aside{
+
+.aside {
     width: 100%;
     max-width: 110px;
     background-color: black;
@@ -35,17 +40,23 @@
     align-items: center;
     flex-direction: column;
 }
-.cont_logo{
+
+.cont_logo {
     width: 100%;
     max-width: 110px;
     background-color: black;
     height: 100%;
 }
-a{
+
+a {
     text-decoration: none;
 }
-.nav{width: 100%;}
-.aside a{
+
+.nav {
+    width: 100%;
+}
+
+.aside a {
     padding: 15px 10px;
     color: #FFF;
     display: flex;
@@ -60,20 +71,25 @@ a{
     -moz-transition: all ease .4s;
     -ms-transition: all ease .4s;
     -o-transition: all ease .4s;
+    cursor: pointer;
 }
-.aside a img{
+
+.aside a img {
     max-height: 35px;
 }
-.nav a:hover{
+
+.nav a:hover {
     background-color: var(--red-light);
 }
-.cont_info{
+
+.cont_info {
     display: flex;
     align-items: center;
     gap: 10px;
     padding-right: 20px;
 }
-.avatar{
+
+.avatar {
     height: 45px;
     width: 45px;
     background-color: aquamarine;
@@ -83,50 +99,61 @@ a{
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
 }
-.btn-red{
+
+.btn-red {
     position: absolute;
     bottom: 20px;
 }
-.container{
+
+.container {
     padding: 20px 25px;
     width: 100%;
 }
-.header_section{
+
+.header_section {
     padding: 20px 0;
 }
-.container_section{
+
+.container_section {
     display: flex;
     flex-direction: column;
     gap: 15px;
 }
-.controls{
+
+.controls {
     display: flex;
     gap: 10px;
     align-items: center;
 }
-.group_controls{
+
+.group_controls {
     display: flex;
     flex-direction: column;
 }
-.group_controls label{
+
+.group_controls label {
     font-size: .9em;
     color: var(--gray);
 }
-.group_controls input{
+
+.group_controls input {
     padding: 7px 10px;
     border: 1px solid #b2bec3;
     outline: none;
 }
-.cont_small{
+
+.cont_small {
     max-width: 70px;
 }
-.cont_large{
+
+.cont_large {
     width: 100%;
     max-width: 550px;
 }
-.button{
+
+.button {
     padding: 10px 20px;
-    background-color: var(--light) ;
+    background-color: var(--light);
     cursor: pointer;
     border: none;
     border-radius: 5px;
@@ -134,36 +161,45 @@ a{
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
-    transition: backgroud-color ease .4s ;
-    -webkit-transition: backgroud-color ease .4s ;
-    -moz-transition: backgroud-color ease .4s ;
-    -ms-transition: backgroud-color ease .4s ;
-    -o-transition: backgroud-color ease .4s ;
+    transition: backgroud-color ease .4s;
+    -webkit-transition: backgroud-color ease .4s;
+    -moz-transition: backgroud-color ease .4s;
+    -ms-transition: backgroud-color ease .4s;
+    -o-transition: backgroud-color ease .4s;
 }
-table{
+
+table {
     background-color: var(--light);
     width: 100%;
     font-size: .9em;
 }
-table th{
+
+table th {
     background-color: var(--gray);
     padding: 7px;
     color: #f1f2f6;
 }
+
 table tbody tr:nth-child(even) {
-	background: #FFF;
+    background: #FFF;
 }
-table td{
+
+table td {
     padding: 5px 10px;
     text-align: center;
 }
-.t_left{
+
+.t_left {
     text-align: left !important;
 }
-.group_buttons{
-    display: flex;
-}
+
+
 /* RADIO BUTTON */
+.radio {
+    display: flex;
+
+}
+
 .radio label {
     display: flex;
     align-items: center;
@@ -176,11 +212,13 @@ table td{
     -webkit-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease;
-  }
-  .radio label:hover {
+}
+
+.radio label:hover {
     background: rgba(230, 100, 90, 0.1);
-  }
-  .radio label:before {
+}
+
+.radio label:before {
     content: '';
     display: inline-block;
     width: 17px;
@@ -190,16 +228,19 @@ table td{
     border-radius: 50%;
     background: none;
     border: 3px solid rgba(230, 100, 90, 1);
-  }
-  input[type='radio'] {
+}
+
+input[type='radio'] {
     display: none;
-  }
-  input[type='radio']:checked + label:before {
+}
+
+input[type='radio']:checked+label:before {
     display: none;
-  }
-  input[type='radio']:checked + label {
+}
+
+input[type='radio']:checked+label {
     padding: 5px 15px;
     background: rgba(230, 100, 90, 1);
     border-radius: 2px;
     color: #fff;
-  }
+}
