--- a/App/views/venta.html
+++ b/App/views/venta.html
@@ -27,6 +27,7 @@
     <table>
       <thead>
         <tr>
+          <th></th>
           <th>#</th>
           <th>Producto</th>
           <th>Precio</th>
@@ -36,18 +37,18 @@
       </thead>
       <tbody id="tb_venta">
         <tr>
-          <td>#</td>
-          <td class="t_left">Producto</td>
-          <td>Precio</td>
-          <td>Cantidad</td>
-          <td>Total</td>
+          <td></td>
+          <td class="t_left"></td>
+          <td></td>
+          <td></td>
+          <td></td>
         </tr>
         <tr>
-          <td>#</td>
-          <td class="t_left">Producto</td>
-          <td>Precio</td>
-          <td>Cantidad</td>
-          <td>Total</td>
+          <td></td>
+          <td class="t_left"></td>
+          <td></td>
+          <td></td>
+          <td></td>
         </tr>
       </tbody>
     </table>
