--- a/App/views/products.html
+++ b/App/views/products.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="group_controls">
-      <button type="button" class="button">Nuevo</button>
+      <button type="button" class="button" id="btn_newProduct">Nuevo</button>
     </div>
   </div>
   <div class="cont_table">
