--- a/App/views/venta.html
+++ b/App/views/venta.html
@@ -5,6 +5,7 @@
   <div class="controls">
     <div class="group_controls cont_large">
       <label for="producto">Producto</label>
+      <input type="hidden" name="idproducto" id="idproducto" />
       <input type="text" name="producto" id="producto" />
     </div>
     <div class="group_controls cont_small">
