--- a/App/views/venta.html
+++ b/App/views/venta.html
@@ -56,7 +56,7 @@
   </div>
   <div class="group_buttons">
     <button type="button" class="button">Guardar</button>
-    <button type="button" class="button">Cancelar</button>
+    <button type="button" class="button" id="btnCleanCart">Cancelar</button>
   </div>
 </div>
 <script>
