--- a/App/views/venta.html
+++ b/App/views/venta.html
@@ -55,7 +55,7 @@
     </table>
   </div>
   <div class="group_buttons">
-    <button type="button" class="button">Guardar</button>
+    <button type="button" class="button" id="btnSaveSale">Guardar</button>
     <button type="button" class="button" id="btnCleanCart">Cancelar</button>
   </div>
 </div>
